# variant

./: CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
UnitTest/: CMakeLists.txt  UT_Variant.cpp
cmake/: VariantConfig.cmake.in
include/: Variant.h
